feat: update colors

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -17,7 +17,13 @@ set-option -g display-time 3000
 # set-hook -g client-session-changed 'run-shell -t :1 "tmux-session-changed"'
 
 # colors
-set-option -sa terminal-features ',xterm-256color:RGB'
+# set-option -sa terminal-features ',xterm-256color:RGB'
+set -g default-terminal "tmux-256color"
+set-option -a terminal-features 'xterm-256color:RGB'
+# set -ga update-environment TERM
+# set -ga update-environment TERM_PROGRAM
+# set -g default-terminal "${TERM}"
+
 
 set -g base-index 1          # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off # don't exit from tmux when closing a session
