feat: placeholder for window rename

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,6 +24,8 @@ set-option -a terminal-features 'xterm-256color:RGB'
 # set -ga update-environment TERM_PROGRAM
 # set -g default-terminal "${TERM}"
 
+# set-option -g automatic-rename on
+# set-option -g automatic-rename-format '#(~/.config/tmux/plugins/tmux-nerd-font-window-name/bin/tmux-nerd-font-window-name #{pane_current_command} #{window_panes})'
 
 set -g base-index 1          # start indexing windows at 1 instead of 0
 set -g detach-on-destroy off # don't exit from tmux when closing a session
