feat: add last command

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -57,6 +57,9 @@ bind '%' split-window -c '#{pane_current_path}' -h
 bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 # TODO: repeat this for all bindings
+
+bind -N "⌘+l last-session (via sesh) " L run-shell "sesh-dev last"
+
 bind -N "⌘+g lazygit " g new-window -c "#{pane_current_path}" -n "🌳" "lazygit 2> /dev/null"
 bind -N "⌘+G gh-dash " G new-window -c "#{pane_current_path}" -n "😺" "ghd 2> /dev/null"
 bind -N "⌘+b build" b split-window -v -l 10 build
