feat: update j command to dev

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -85,8 +85,21 @@ bind-key "K" display-popup -E -w 40% "sesh connect \"$(
   sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
 )\""
 
-bind-key "J" display-popup -E -w 40% "sesh-dev connect \"$(
-  sesh-dev list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
+# bind-key "J" display-popup -E -w 40% "sesh-dev connect \"$(
+#   sesh-dev list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
+# )\""
+
+bind-key "J" run-shell "sesh-dev connect \"$(
+  sesh-dev list | fzf-tmux -p 55%,60% \
+    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
 )\""
 
 # NOTE: has icons but is less stable
