--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -59,6 +59,7 @@ bind c new-window -c '#{pane_current_path}'
 # TODO: repeat this for all bindings
 
 bind -N "⌘+l last-session (via sesh) " L run-shell "sesh-dev last"
+bind -N "⌘+9 switch to root session (via sesh) " 9 run-shell "sesh connect --root $(pwd)"
 
 bind -N "⌘+g lazygit " g new-window -c "#{pane_current_path}" -n "🌳" "lazygit 2> /dev/null"
 bind -N "⌘+G gh-dash " G new-window -c "#{pane_current_path}" -n "😺" "ghd 2> /dev/null"
