feat: display tmux message if sesh last fails

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -58,7 +58,7 @@ bind '"' split-window -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 # TODO: repeat this for all bindings
 
-bind -N "⌘+l last-session (via sesh) " L run-shell "sesh-dev last"
+bind -N "⌘+l last-session (via sesh) " L run-shell "sesh last || tmux display-message -d 1000 'Oops, no last sessions found'"
 bind -N "⌘+9 switch to root session (via sesh) " 9 run-shell "sesh connect --root $(pwd)"
 
 bind -N "⌘+g lazygit " g new-window -c "#{pane_current_path}" -n "🌳" "lazygit 2> /dev/null"
