feat: implement last

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -86,8 +86,20 @@ bind-key "K" display-popup -E -w 40% "sesh connect \"$(
   sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
 )\""
 
-# bind-key "J" display-popup -E -w 40% "sesh-dev connect \"$(
-#   sesh-dev list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
+bind-key "R" display-popup -E -w 40% "sesh connect \"$(
+  sesh list -i -H | gum filter --value \"$(sesh root)\" --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
+)\""
+
+# bind-key "K" display-popup -E -w 40% "sesh connect \"$(
+#   sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
+# )\""
+
+bind-key "A" display-popup -E -w 40% "sesh connect \"$(
+  fabric -l | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a fabric pattern' --prompt='🧠'
+)\""
+
+# bind-key "J" display-popup -E -w 40% "sesh connect \"$(
+#   sesh list | zf -p --height 50
 # )\""
 
 bind-key "J" run-shell "sesh-dev connect \"$(
