feat: make J binding not use sesh-dev (just sesh)

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -102,8 +102,8 @@ bind-key "A" display-popup -E -w 40% "sesh connect \"$(
 #   sesh list | zf -p --height 50
 # )\""
 
-bind-key "J" run-shell "sesh-dev connect \"$(
-  sesh-dev list | fzf-tmux -p 55%,60% \
+bind-key "J" run-shell "sesh connect \"$(
+  sesh list | fzf-tmux -p 55%,60% \
     --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
     --bind 'tab:down,btab:up' \
