feat: ignore flavors

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ Library/Preferences/ru.keepcoder.Telegram.plist
 .config/tmux/plugins
 .config/fish/conf.d/anthropic.fish
 .config/fish/conf.d/youtube.fish
+.config/yazi/flavors/
