--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ Library/Preferences/ru.keepcoder.Telegram.plist
 .config/fish/conf.d/anthropic.fish
 .config/fish/conf.d/youtube.fish
 .config/yazi/flavors/
+.config/fish/conf.d/hass.fish
