feat: add additional bindings

--- a/.config/aerospace/aerospace.toml
+++ b/.config/aerospace/aerospace.toml
@@ -68,10 +68,15 @@ alt-shift-semicolon = 'mode layout'
 # TODO: come up with a mode that works for me (resizing, moving?)
 [mode.layout.binding]
 esc = ['mode main']
+e = 'layout accordion horizontal vertical'
 h = 'move left'
 j = 'move down'
 k = 'move up'
 l = 'move right'
+alt-h = 'join-with left'
+alt-j = 'join-with down'
+alt-k = 'join-with up'
+alt-l = 'join-with right'
 f = 'fullscreen'
 0 = ['flatten-workspace-tree', 'mode main']
 g = ['layout floating tiling', 'mode main']
