feat: adjust sesh popup for Studio Display

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -82,7 +82,7 @@ bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
 
-bind-key "K" display-popup -E -w 40% "sesh connect \"$(
+bind-key "K" display-popup -E -w 33% -h 63% "sesh connect \"$(
   sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
 )\""
 
