fix: string splitting on tmux popup command

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -86,8 +86,8 @@ bind-key "K" display-popup -E -w 33% -h 63% "sesh connect \"$(
   sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
 )\""
 
-bind-key "R" display-popup -E -w 40% "sesh connect \"$(
-  sesh list -i -H | gum filter --value \"$(sesh root)\" --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
+bind-key "R" display-popup -E -w 40% "sesh connect \"\$(
+  sesh list -i -H | gum filter --value \"\$(sesh root)\" --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
 )\""
 
 # bind-key "K" display-popup -E -w 40% "sesh connect \"$(
