--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -28,6 +28,7 @@ macos-window-shadow = false
 window-decoration = false
 
 # keybindings
+# a-z
 keybind = super+f=text:\x3a\x47\x72\x65\x70\x0a
 keybind = super+g=text:\x02\x67
 keybind = super+k=text:\x02\x4b
@@ -39,11 +40,13 @@ keybind = super+s=text:\x3a\x77\x0a
 keybind = super+t=text:\x02\x63
 keybind = super+w=text:\x02\x78
 
-keybind = super+left_bracket=text:<C-o>
-keybind = super+right_bracket=text:<C-i>
-
+# A-Z
 keybind = super+shift+o=text:\x3a\x47\x6f\x54\x6f\x53\x79\x6d\x62\x6f\x6c\x0a
 keybind = super+shift+p=text:\x3a\x47\x6f\x54\x6f\x43\x6f\x6d\x6d\x61\x6e\x64\x0a
+
+# special characters
+keybind = super+left_bracket=text:<C-o>
+keybind = super+right_bracket=text:<C-i>
 
 keybind = super+shift+left_bracket=text:\x02\x6e
 keybind = super+shift+right_bracket=text:\x02\x70
