--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -9,21 +9,21 @@
 # Ghostty is a fast, feature-rich, and cross-platform terminal emulator that uses platform-native UI and GPU acceleration.
 # https://ghostty.org/docs/config/reference
 
-# general
-clipboard-read = "allow"
-clipboard-trim-trailing-spaces = true
-clipboard-write = "allow"
-mouse-hide-while-typing = true
-
 # visuals
 font-family = "CommitMono"
 font-family = "Symbols Nerd Font Mono" # fallback
 font-size = 20
 macos-window-shadow = false
+mouse-hide-while-typing = true
 theme = light:catppuccin-latte,dark:catppuccin-mocha
 window-decoration = false
 window-padding-x = 16
 window-padding-y = 10
+
+# clipboard
+clipboard-read = "allow"
+clipboard-trim-trailing-spaces = true
+clipboard-write = "allow"
 
 # keybindings
 # a-z
