feat(ghostty): add all potential letters

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -26,25 +26,67 @@ clipboard-trim-trailing-spaces = true
 clipboard-write = "allow"
 
 # keybindings
+
 # a-z
-keybind = super+f=text:\x3a\x47\x72\x65\x70\x0a
-keybind = super+g=text:\x02\x67
-keybind = super+k=text:\x02\x4b
-keybind = super+l=text:\x02\x4c
-keybind = super+o=text:\x02\x75
-keybind = super+p=text:\x3a\x47\x6f\x54\x6f\x46\x69\x6c\x65\x0a
-keybind = super+q=text:\x3a\x1b\x1b\x3a\x71\x61\x21\x0a
-keybind = super+s=text:\x3a\x77\x0a
-keybind = super+t=text:\x02\x63
-keybind = super+w=text:\x02\x78
+# keybind = super+a= # select all?
+# keybind = super+b= # build?
+# keybind = super+c= # copy
+# keybind = super+d=
+# keybind = super+e=
+keybind = super+f=text:\x3a\x47\x72\x65\x70\x0a # :Grep (find)
+keybind = super+g=text:\x02\x67 # <perfix>+g (open lazygit window)
+# keybind = super+h= # hide?
+# keybind = super+i=
+# keybind = super+j=
+keybind = super+k=text:\x02\x4b # <perfix>+k (open sesh picker)
+keybind = super+l=text:\x02\x4c # <perfix>+l (switch to last session)
+# keybind = super+m= # minimize?
+# keybind = super+n= # new?
+keybind = super+o=text:\x02\x75 # <perfix>+u
+keybind = super+p=text:\x3a\x47\x6f\x54\x6f\x46\x69\x6c\x65\x0a # :GotoFile
+keybind = super+q=text:\x3a\x1b\x1b\x3a\x71\x61\x21\x0a # :qa!
+# keybind = super+r= (refresh?)
+keybind = super+s=text:\x3a\x77\x0a # :w (write buffer)
+keybind = super+t=text:\x02\x63 # <perfix>+c (new window)
+# keybind = super+u=
+# keybind = super+v= # paste
+keybind = super+w=text:\x02\x78 # <perfix>+x (close window)
+# keybind = super+x= # cut
+# keybind = super+y=
+# keybind = super+z= # undo?
 
 # A-Z
-keybind = super+shift+o=text:\x3a\x47\x6f\x54\x6f\x53\x79\x6d\x62\x6f\x6c\x0a
-keybind = super+shift+p=text:\x3a\x47\x6f\x54\x6f\x43\x6f\x6d\x6d\x61\x6e\x64\x0a
+# keybind = super+shift+a=
+# keybind = super+shift+b=
+# keybind = super+shift+c=
+# keybind = super+shift+d=
+# keybind = super+shift+e=
+# keybind = super+shift+f=
+# keybind = super+shift+g=
+# keybind = super+shift+h=
+# keybind = super+shift+i=
+# keybind = super+shift+j=
+# keybind = super+shift+k= # secondary sesh
+# keybind = super+shift+l=
+# keybind = super+shift+m=
+# keybind = super+shift+n=
+keybind = super+shift+o=text:\x3a\x47\x6f\x54\x6f\x53\x79\x6d\x62\x6f\x6c\x0a # :GotoSymbol
+keybind = super+shift+p=text:\x3a\x47\x6f\x54\x6f\x43\x6f\x6d\x6d\x61\x6e\x64\x0a # :GotoCommand
+# keybind = super+shift+q=
+# keybind = super+shift+r=
+# keybind = super+shift+s=
+# keybind = super+shift+t=
+# keybind = super+shift+u=
+# keybind = super+shift+v=
+# keybind = super+shift+w= (undo close?)
+# keybind = super+shift+x=
+# keybind = super+shift+y=
+# keybind = super+shift+z= (redo?)
 
 # special characters
-keybind = super+left_bracket=text:<C-o>
-keybind = super+right_bracket=text:<C-i>
+keybind = super+left_bracket=text:<C-o> # jump back
+keybind = super+right_bracket=text:<C-i> # jump forward
 
-keybind = super+shift+left_bracket=text:\x02\x6e
-keybind = super+shift+right_bracket=text:\x02\x70
+# special characters (shift)
+keybind = super+shift+left_bracket=text:\x02\x6e # <perfix>+n (next window)
+keybind = super+shift+right_bracket=text:\x02\x70 # <perfix>+p (previous window)
