chore: adjust comments on config

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -11,7 +11,8 @@
 
 # visuals
 font-family = "CommitMono"
-font-family = "Symbols Nerd Font Mono" # fallback
+# fallback
+font-family = "Symbols Nerd Font Mono"
 font-size = 20
 macos-window-shadow = false
 mouse-hide-while-typing = true
@@ -28,32 +29,51 @@ clipboard-write = "allow"
 # keybindings
 
 # a-z
-# keybind = super+a= # select all?
-# keybind = super+b= # build?
-# keybind = super+c= # copy
+# select all?
+# keybind = super+a= 
+# build?
+# keybind = super+b= 
+# copy
+# keybind = super+c= 
 # keybind = super+d=
 # keybind = super+e=
-keybind = super+f=text:\x3a\x47\x72\x65\x70\x0a # :Grep (find)
-keybind = super+g=text:\x02\x67 # <perfix>+g (open lazygit window)
-# keybind = super+h= # hide?
+# :Grep (find)
+keybind = super+f=text:\x3a\x47\x72\x65\x70\x0a
+# <perfix>+g (open lazygit window)
+keybind = super+g=text:\x02\x67
+# hide?
+# keybind = super+h= 
 # keybind = super+i=
 # keybind = super+j=
-keybind = super+k=text:\x02\x4b # <perfix>+k (open sesh picker)
-keybind = super+l=text:\x02\x4c # <perfix>+l (switch to last session)
-# keybind = super+m= # minimize?
-# keybind = super+n= # new?
-keybind = super+o=text:\x02\x75 # <perfix>+u
-keybind = super+p=text:\x3a\x47\x6f\x54\x6f\x46\x69\x6c\x65\x0a # :GotoFile
-keybind = super+q=text:\x3a\x1b\x1b\x3a\x71\x61\x21\x0a # :qa!
-# keybind = super+r= (refresh?)
-keybind = super+s=text:\x3a\x77\x0a # :w (write buffer)
-keybind = super+t=text:\x02\x63 # <perfix>+c (new window)
+# <perfix>+k (open sesh picker)
+keybind = super+k=text:\x02\x4b
+# <perfix>+l (switch to last session)
+keybind = super+l=text:\x02\x4c
+# minimize?
+# keybind = super+m= 
+# new?
+# keybind = super+n= 
+# <perfix>+u (open url)
+keybind = super+o=text:\x02\x75
+# :GotoFile
+keybind = super+p=text:\x3a\x47\x6f\x54\x6f\x46\x69\x6c\x65\x0a
+# :qa!
+keybind = super+q=text:\x3a\x1b\x1b\x3a\x71\x61\x21\x0a
+# :w (write buffer)
+keybind = super+r=reload_config
+keybind = super+s=text:\x3a\x77\x0a
+# <perfix>+c (new window)
+keybind = super+t=text:\x02\x63
 # keybind = super+u=
-# keybind = super+v= # paste
-keybind = super+w=text:\x02\x78 # <perfix>+x (close window)
-# keybind = super+x= # cut
+# paste
+# keybind = super+v= 
+# <perfix>+x (close window)
+keybind = super+w=text:\x02\x78
+# cut
+# keybind = super+x= 
 # keybind = super+y=
-# keybind = super+z= # undo?
+# undo?
+# keybind = super+z= 
 
 # A-Z
 # keybind = super+shift+a=
@@ -65,13 +85,16 @@ keybind = super+w=text:\x02\x78 # <perfix>+x (close window)
 # keybind = super+shift+g=
 # keybind = super+shift+h=
 # keybind = super+shift+i=
+# secondary sesh
 # keybind = super+shift+j=
-# keybind = super+shift+k= # secondary sesh
+# keybind = super+shift+k=
 # keybind = super+shift+l=
 # keybind = super+shift+m=
 # keybind = super+shift+n=
-keybind = super+shift+o=text:\x3a\x47\x6f\x54\x6f\x53\x79\x6d\x62\x6f\x6c\x0a # :GotoSymbol
-keybind = super+shift+p=text:\x3a\x47\x6f\x54\x6f\x43\x6f\x6d\x6d\x61\x6e\x64\x0a # :GotoCommand
+# :GotoSymbol
+keybind = super+shift+o=text:\x3a\x47\x6f\x54\x6f\x53\x79\x6d\x62\x6f\x6c\x0a
+# :GotoCommand
+keybind = super+shift+p=text:\x3a\x47\x6f\x54\x6f\x43\x6f\x6d\x6d\x61\x6e\x64\x0a
 # keybind = super+shift+q=
 # keybind = super+shift+r=
 # keybind = super+shift+s=
@@ -84,9 +107,13 @@ keybind = super+shift+p=text:\x3a\x47\x6f\x54\x6f\x43\x6f\x6d\x6d\x61\x6e\x64\x0
 # keybind = super+shift+z= (redo?)
 
 # special characters
-keybind = super+left_bracket=text:<C-o> # jump back
-keybind = super+right_bracket=text:<C-i> # jump forward
+# jump back
+keybind = super+left_bracket=text:<C-o>
+# jump forward
+keybind = super+right_bracket=text:<C-i>
 
 # special characters (shift)
-keybind = super+shift+left_bracket=text:\x02\x6e # <perfix>+n (next window)
-keybind = super+shift+right_bracket=text:\x02\x70 # <perfix>+p (previous window)
+# <perfix>+n (next window)
+keybind = super+shift+left_bracket=text:\x02\x6e
+# <perfix>+p (previous window)
+keybind = super+shift+right_bracket=text:\x02\x70
