--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -36,10 +36,11 @@ set -g renumber-windows on   # renumber all windows when any window is closed
 set -g set-clipboard on      # use system clipboard
 set -g status-interval 3     # update the status bar every 3 seconds
 
-set -g status-left "#[fg=blue,bold]#S "
-set -g status-right " #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yml)"
-set -g status-left-length 200    # increase length (from 10)
-set -g status-right-length 200   # increase length (from 10)
+set -g status-left "#[fg=blue,bold]#S #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yml) "
+set -g status-right ""
+# set -g status-right " #[fg=white,nobold]#(gitmux -cfg $HOME/.config/tmux/gitmux.yml)"
+set -g status-left-length 300 # increase length (from 10)
+# set -g status-right-length 200   # increase length (from 10)
 set -g status-position top       # macOS / darwin style
 set -g status-style 'bg=default' # transparent
 
