--- a/.config/sesh/sesh.toml
+++ b/.config/sesh/sesh.toml
@@ -1,7 +1,27 @@
 import = ["~/.config/sesh/configs/nu-sesh.toml"]
 
+# TODO: experiment with long-living sesh picker (as session)
+# [[session]]
+# name = "sesh"
+# path = "~/c/dotfiles/.config/sesh"
+# startup_command = "sesh connect \"$(sesh list --icons | fzf)\""
+
 [default_session]
-startup_command = "nvim +GoToFile"
+# startup_command = "nvim +GoToFile"
+startup_command = "nvim_picker"
+startup_command_ignore_dirs = ["~/repos", "~/.config"]
+preview_command = "eza --all --git --icons --color=always {}"
+
+[[session]]
+name = "lazy plugins"
+path = "~/.local/share/nvim/lazy"
+startup_command = "sesh connect (ls | fzf --ansi --no-border --preview 'glow -s light {}/README.md' --preview-window=right:70,border-none) && exit"
+# TODO: add `--hide-tmux` to fzf command (or switch to sesh preview)
+# startup_command = "sesh connect (ls | fzf --ansi --no-border --preview 'glow -s light {}/README.md' --preview-window=right:70,border-none --hide-tmux) && exit"
+
+[[session_preview]]
+pattern_folder_has = "README.md"
+preview_command = "glow -s light {}"
 
 # TODO: potential feature ideas
 # [[session]]
@@ -11,7 +31,12 @@ startup_command = "nvim +GoToFile"
 # detached = true # never attach to this session, just create it in the background
 # tmuxp = "~/.config/tmux/tmuxp/joshmedeski.com.yml"
 # tmuxinator = "~/.config/tmux/tmuxinator/joshmedeski.com.yml"
-#
+
+[[session]]
+name = "sesh config"
+path = "~/c/dotfiles/.config/sesh"
+startup_command = "nvim sesh.toml"
+preview_command = "bat --language=toml --style=snip --color=always ~/c/dotfiles/.config/sesh/sesh.toml"
 
 [[session]]
 name = "ollama"
@@ -27,12 +52,16 @@ startup_command = "macmon"
 name = "update"
 path = "/tmp"
 startup_command = "update"
+preview_command = "bat --language=fish --style=snip --color=always ~/c/dotfiles/.config/bin/update"
 
 [[session]]
 name = "aerospace config"
 path = "~/c/dotfiles/.config/aerospace"
 startup_command = "nvim aerospace.toml"
+preview_command = "bat --style='full' --color=always ~/c/dotfiles/.config/aerospace/aerospace.toml"
 
+# NOTE: bat styles (--style)
+# full, auto, plain, changes, header, header-filename,
 [[session]]
 name = "mactop"
 path = "/tmp"
@@ -77,6 +106,9 @@ startup_command = "l"
 name = "tmux config"
 path = "~/c/dotfiles/.config/tmux"
 startup_command = "nvim tmux.conf"
+preview_command = "bat --language=bash --style=snip --color=always ~/c/dotfiles/.config/tmux/tmux.conf"
+# TODO: add `always_top = true` to force this to always be the top result
+# TODO: do the same for ghostty
 
 [[session]]
 name = "gitmux config"
@@ -94,7 +126,7 @@ path = "~/c/dotfiles/.config/nvim"
 [[session]]
 name = "fish config"
 path = "~/c/dotfiles/.config/fish"
-startup_command = "nvim config.fish"
+preview_command = "bat --language=fish --style=snip --color=always ~/c/dotfiles/.config/fish/config.fish"
 
 [[session]]
 name = "yazi config"
@@ -107,14 +139,9 @@ path = "~/c/dotfiles/.config/wezterm"
 startup_command = "nvim wezterm.lua"
 
 [[session]]
-name = "second brain 🧠"
+name = "second brain"
 path = "~/c/second-brain"
 startup_command = "nvim +ObsidianToday"
-
-[[session]]
-name = "sesh config"
-path = "~/c/dotfiles/.config/sesh"
-startup_command = "nvim sesh.toml"
 
 [[session]]
 name = "my custom binaries"
@@ -150,11 +177,6 @@ startup_command = "nvim fzf-url.sh"
 name = "Downloads 📥"
 path = "~/Downloads"
 startup_command = "yazi"
-
-[[session]]
-name = "lazy plugins"
-path = "~/.local/share/nvim/lazy"
-startup_command = "sesh connect (ls | fzf --ansi --no-border --preview 'glow -s light {}/README.md' --preview-window=right:70,border-none) && exit"
 
 [[session]]
 name = "obsidian plugins"
