feat(tmux): adjustments to tmux confg

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -83,13 +83,13 @@ bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key x kill-pane # skip "kill-pane 1? (y/n)" prompt (cmd+w)
 bind-key e send-keys "tmux capture-pane -p -S - | nvim -c 'set buftype=nofile' +" Enter
 
-bind-key "K" display-popup -E -w 33% -h 63% "sesh connect \"$(
+bind-key "J" display-popup -E -w 33% -h 63% "sesh connect \"$(
   sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
 )\""
 
-bind-key "R" display-popup -E -w 40% "sesh connect \"\$(
-  sesh list -i -H | gum filter --value \"\$(sesh root)\" --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
-)\""
+# bind-key "R" display-popup -E -w 40% "sesh connect \"\$(
+#   sesh list -i -H | gum filter --value \"\$(sesh root)\" --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
+# )\""
 
 # bind-key "K" display-popup -E -w 40% "sesh connect \"$(
 #   sesh list -i | gum filter --limit 1 --fuzzy --no-sort --placeholder 'Pick a sesh' --prompt='⚡'
@@ -103,33 +103,53 @@ bind-key "A" display-popup -E -w 40% "sesh connect \"$(
 #   sesh list | zf -p --height 50
 # )\""
 
-bind-key "J" run-shell "sesh connect \"$(
-  sesh list | fzf-tmux -p 55%,60% \
-    --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
-    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
-    --bind 'tab:down,btab:up' \
-    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
-    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
-    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c)' \
-    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
-    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-    --bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
-)\""
+# bind-key "J" run-shell "sesh connect \"$(
+#   sesh list | fzf-tmux -p 55%,60% \
+#     --no-sort --ansi --border-label ' sesh ' --prompt '⚡  ' \
+#     --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+#     --bind 'tab:down,btab:up' \
+#     --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list)' \
+#     --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t)' \
+#     --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c)' \
+#     --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z)' \
+#     --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+#     --bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
+# )\""
 
 # NOTE: has icons but is less stable
 # bind-key "K" run-shell "sesh_fzf_tmux_choose"
-# bind-key "J" run-shell "sesh connect $(
-# 	sesh list -i | fzf-tmux -p 55%,60% \
-# 		--no-sort --border-label ' sesh ' --prompt '⚡  ' \
-# 		--header '  ^a all ^t tmux ^x zoxide ^g config ^d tmux kill ^f find' \
-# 		--bind 'tab:down,btab:up' \
-# 		--bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list -i)' \
-# 		--bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -it)' \
-# 		--bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -ic)' \
-# 		--bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -iz)' \
-# 		--bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
-# 		--bind 'ctrl-d:execute(tmux kill-session -t {})+change-prompt(⚡  )+reload(sesh list)'
-# )"
+bind-key "K" run-shell "sesh connect \"$(
+  sesh list --icons | fzf-tmux -p 100%,100% \
+    --no-sort --ansi --prompt '⚡  ' --no-border \
+    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+    --margin 8% \
+    --preview-window 'right:60%:noborder' \
+    --preview 'sesh preview {}'
+)\""
+
+# Relative sesh switcher
+bind-key "R" run-shell "sesh connect \"\$(
+  sesh list -i -H | fzf-tmux -p 100%,100% \
+    --no-sort --ansi --prompt '⚡  ' --no-border --query  \"\$(sesh root)\" \
+    --header '  ^a all ^t tmux ^g configs ^x zoxide ^d tmux kill ^f find' \
+    --bind 'tab:down,btab:up' \
+    --bind 'ctrl-a:change-prompt(⚡  )+reload(sesh list --icons)' \
+    --bind 'ctrl-t:change-prompt(🪟  )+reload(sesh list -t --icons)' \
+    --bind 'ctrl-g:change-prompt(⚙️  )+reload(sesh list -c --icons)' \
+    --bind 'ctrl-x:change-prompt(📁  )+reload(sesh list -z --icons)' \
+    --bind 'ctrl-f:change-prompt(🔎  )+reload(fd -H -d 2 -t d -E .Trash . ~)' \
+    --bind 'ctrl-d:execute(tmux kill-session -t {2..})+change-prompt(⚡  )+reload(sesh list --icons)' \
+    --margin 8% \
+    --preview-window 'right:60%:noborder' \
+    --preview 'sesh preview {}'
+)\""
 
 # NOTE: can be used for debugging
 # )\" 2> /tmp/sesh-$(date +"%Y-%m-%d-%H-%M-%S").txt"
