--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,3 +1,4 @@
+# vim: set filetype=dosini
 #
 #  ██████╗ ██╗  ██╗ ██████╗ ███████╗████████╗████████╗██╗   ██╗
 # ██╔════╝ ██║  ██║██╔═══██╗██╔════╝╚══██╔══╝╚══██╔══╝╚██╗ ██╔╝
